--- a/OpenHomeMVC/pom.xml
+++ b/OpenHomeMVC/pom.xml
@@ -17,6 +17,7 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
+		<start-class>com.openhome.OpenHomeMvcApplication</start-class>
 	</properties>
 
 	<dependencies>
@@ -55,6 +56,18 @@
 		  <groupId>com.google.firebase</groupId>
 		  <artifactId>firebase-admin</artifactId>
 		  <version>6.11.0</version>
+		</dependency>
+
+		<dependency>
+		    <groupId>commons-io</groupId>
+		    <artifactId>commons-io</artifactId>
+		    <version>2.6</version>
+		</dependency>
+
+		<dependency>
+		    <groupId>com.cloudinary</groupId>
+		    <artifactId>cloudinary-http42</artifactId>
+		    <version>1.1.3</version>
 		</dependency>
 
 
