--- a/OpenHomeMVC/src/main/resources/application.properties
+++ b/OpenHomeMVC/src/main/resources/application.properties
@@ -26,3 +26,6 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 # SSL, post 465
 #spring.mail.properties.mail.smtp.socketFactory.port = 465
 #spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
+
+spring.servlet.multipart.max-file-size = 100MB
+spring.servlet.multipart.max-request-size = 100MB
