--- a/OpenHomeMVC/pom.xml
+++ b/OpenHomeMVC/pom.xml
@@ -18,6 +18,7 @@
 		<java.version>1.8</java.version>
 		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
 		<start-class>com.openhome.OpenHomeMvcApplication</start-class>
+		<spring.version>3.0.5.RELEASE</spring.version>		
 	</properties>
 
 	<dependencies>
@@ -70,6 +71,10 @@
 		    <version>1.1.3</version>
 		</dependency>
 
+		<dependency>
+	        <groupId>org.springframework.boot</groupId>
+	        <artifactId>spring-boot-starter-aop</artifactId>
+	    </dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
