--- a/OpenHomeMVC/src/main/resources/application.properties
+++ b/OpenHomeMVC/src/main/resources/application.properties
@@ -29,3 +29,5 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 spring.servlet.multipart.max-file-size = 100MB
 spring.servlet.multipart.max-request-size = 100MB
+
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
